--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,6 +20,10 @@ h2 {
   margin-bottom: 30px;
 }
 
+input:focus {
+  outline-color: #000000;
+}
+
 footer {
   height: 75px;
   background-color: #15ab04;
@@ -82,9 +86,9 @@ br.responsive {
 }
 
 .submitButton {
-  height: 5vh;
+  height: 35px;
   width: 60px;
-  font-size: 2.5vh;
+  font-size: 16px;
   background-color: #15ab04;
   color: #f0f0f0;
   cursor: pointer;
@@ -109,7 +113,7 @@ br.responsive {
     font-size: 10.5vw;
   }
   h2 {
-    font-size: 2vh;
+    font-size: 15px;
     margin-bottom: 20px;
   }
   footer {
@@ -119,7 +123,7 @@ br.responsive {
     display: inline;
   }
   .searchBar {
-    height: 5vh;
+    height: 35px;
     width: 50vw;
   }
   .submitButton {
